<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mudur_Giris_Activity">

    <include
        layout="@layout/actionbar_app"
        android:id="@+id/actionbarlogin"/>

    <TextView
        android:id="@+id/txtWelcomeAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/manager"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:layout_below="@+id/actionbarlogin"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/managerImage"
        android:layout_width="145dp"
        android:layout_height="123dp"
        android:layout_below="@id/txtWelcomeAppName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/teacher"
        android:src="@drawable/manager" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/managerImage"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="25dp">

        <EditText
            android:id="@+id/txtManagerEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:autofillHints="@string/email_manager"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtManagerPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:autofillHints="@string/password_manager"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnManagerLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorRedButton"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnManagerKaydol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/create_account"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>