<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ogretmen_Ekle_Activity">


    <include layout="@layout/actionbar_app"
        android:id="@+id/actionbarlogin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionbarlogin"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="25dp">

        <EditText
            android:id="@+id/txtTeacherName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:autofillHints="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtTeacherSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/surname"
            android:autofillHints="@string/surname"
            android:inputType="text"/>

        <EditText
            android:id="@+id/txtTeacherNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/tel"
            android:autofillHints="@string/tel"
            android:inputType="text"/>

        <EditText
            android:id="@+id/txtTeacherEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:autofillHints="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/txtTeacherPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/passwordd"
            android:autofillHints="@string/passwordd"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtTeacherClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/teacher_class"
            android:autofillHints="@string/teacher_class"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtTeacherTc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/teacher_tc"
            android:autofillHints="@string/teacher_tc"
            android:maxLength="11"
            android:inputType="number" />

        <Button
            android:id="@+id/btnAddTeacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorRedButton"
            android:text="@string/add_teacher"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>