<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="20dp">


    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/okul"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtWelcomeAppName"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtWelcomeAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school"
        android:textSize="35sp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:orientation="horizontal"
        android:layout_below="@+id/image"
        android:gravity="bottom">

        <Button
            android:id="@+id/mudur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:text="@string/manager"
            android:layout_marginLeft="10dp"
            android:padding="9dp"/>

        <Button
            android:id="@+id/ogretmen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:text="@string/teacher"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:padding="9dp"/>

        <Button
            android:id="@+id/veli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parent"
            android:background="@android:color/darker_gray"
            android:padding="9dp"/>

    </LinearLayout>


</RelativeLayout>